--- a/playground/displayStudy.html
+++ b/playground/displayStudy.html
@@ -13,6 +13,26 @@ div.line{
     color:red;
     display:inline;
 }
+.size1{
+    background-color:green;
+    width: 100px;
+    height: 100px;
+}
+.size2{
+    background-color: red;
+    width: 60px;
+    height: 80px;
+}
+.table, .table * {margin: 0 auto; padding: 0;font-size: 14px;font-family: Arial, 宋体, Helvetica, sans-serif;}
+.table {display: table; width: 80%; border-collapse: collapse;}
+
+.table-tr {display: table-row; height: 30px;}
+.table-th {display: table-cell;font-weight: bold;height: 100%;border: 1px solid gray;text-align: center;vertical-align: middle;background-color:#E5E5E5;}
+.table-td {display: table-cell; height: 100%;}
+
+.sub-table {width: 100%;height: 100%;display: table;}
+.sub-table-tr {display: table-row; height: 100%;}
+.sub-table-td {display: table-cell; height: 100%;border: 1px solid gray; text-align: center;vertical-align: middle;}
 </style>
 </head>
 <body>
@@ -38,7 +58,7 @@ div.line{
     <div>行内元素设置width和height<mark>无效</mark>，而且块级元素即使设置宽度也还是独占一行</div>
 </div>
 <div class="line">
-    <div>display:list-item元素作为列表显示</div>
+    <div>display:list-item,元素作为列表显示</div>
     <div style="display:list-item">1</div>
     <div style="display:list-item">2</div>
     <div style="display:list-item">3</div>
@@ -46,6 +66,139 @@ div.line{
     <span style="display:list-item">5</span>
     <div>为元素内容生成一个块型盒，随后再生成一个<mark>列表型</mark>的<mark>行内</mark>盒。其效果就和ul中出现项目列表符号一样。通俗地说就是会在内容前面自动加上黑点，而display:block则不会出现黑点</div>
 </div>
-
+<div class="line">
+    <div>display:run-in,元素会根据上下文作为块级元素或内联(行内)元素显示</div>
+    <div>
+        <div>1.如果 run-in box 包含 block box，那么这个 run-in box 也成为 block box</div>
+        <div>
+            <div class="size1" style="display:run-in">run in box
+                <div class="size2" style="display:block">block box</div>
+            </div>
+            <div style=" margin-top:30px;">设为inline时于上方有区别</div>
+            <div class="size1" style="display:inline;"> inline box
+                <div class="size2" style="display:block">block box</div>
+            </div>
+        </div>
+        <div>2.如果紧跟在 run-in box 之后的兄弟节点是 block box，那么这个 run-in box 就会做为此 block box 里的行内元素，run-in box 不能与另一个run-in box为兄弟元素，也不能被包含 display为run-in 的块内</div>
+        <div>否则为 block box</div>
+        <div class="size1" style="display:run-in">run in box</div>
+        <div class="size2" style="display:block">block box</div>
+    </div>
+</div>
+<div class="line">
+    <div>以下属性可以让div作为表格显示来配合使用</div>
+    <div>table,  此元素会作为块级表格来显示（类似 < table>），表格前后带有换行符</div>
+    <div>inline-table,  此元素会作为内联表格来显示（类似 < table>），表格前后没有换行符</div>
+    <div>table-row-group,  此元素会作为一个或多个行的分组来显示（类似 < tbody>）</div>
+    <div>table-header-group,  此元素会作为一个或多个行的分组来显示（类似 < thead>）</div>
+    <div>table-footer-group,  此元素会作为一个或多个行的分组来显示（类似 < tfoot>）</div>
+    <div>table-row,  此元素会作为一个表格行显示（类似 < tr>）</div>
+    <div>table-column-group,  此元素会作为一个或多个列的分组来显示（类似 < colgroup>）</div>
+    <div>table-column,  此元素会作为一个单元格列显示（类似 < col>）</div>
+    <div>table-cell,  此元素会作为一个表格单元格显示（类似 < td> 和 < th>）</div>
+    <div>table-caption,  此元素会作为一个表格标题显示（类似 < caption>）</div> 
+    <div style="margin-top:20px;">实例：</div>
+    <div class="table">
+        <div class="table-tr">
+            <div class="table-td">
+                <div class="sub-table">
+                    <div class="sub-table-tr">
+                        <div class="table-th" style="width: 40%;">省份／直辖市</div>
+                        <div class="table-th" style="width: 30%;">GDP(亿元)</div>
+                        <div class="table-th" style="width: 30%;">增长率</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="table-tr">
+            <div class="table-td">
+                <div class="sub-table">
+                    <div class="sub-table-tr">
+                        <div class="sub-table-td" style="width: 40%;">广东</div>
+                        <div class="sub-table-td" style="width: 30%;">72812</div>
+                        <div class="sub-table-td" style="width: 30%;">8.0%</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="table-tr" style="height:60px;">
+            <div class="table-td">
+                <div class="sub-table">
+                    <div class="sub-table-tr">
+                        <div class="sub-table-td" style="width: 40%; border: none;">
+                            <div class="sub-table">
+                                <div class="sub-table-tr" style="height:50%;">
+                                    <div class="sub-table-td" style="width: 100%; height:50%;">
+                                        河南
+                                    </div>
+                                </div>
+                                <div class="sub-table-tr" style="height:50%;">
+                                    <div class="sub-table-td" style="width: 100%; height:50%;">
+                                        江苏
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="sub-table-td" style="width: 30%;border: none;">
+                            <div class="sub-table">
+                                <div class="sub-table-tr" style="height:50%;">
+                                    <div class="sub-table-td" style="width: 100%; height:50%;">
+                                        37010
+                                    </div>
+                                </div>
+                                <div class="sub-table-tr" style="height:50%;">
+                                    <div class="sub-table-td" style="width: 100%; height:50%;">
+                                        70116
+                                    </div>
+                                </div>
+                            </div>
+                        
+                        </div>
+                        
+                        <div class="sub-table-td" style="width: 30%;border: none;">
+                            <div class="sub-table">
+                                <div class="sub-table-tr">
+                                    <div class="sub-table-td" style="width: 100%;">
+                                        列合并
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="table-tr">
+            <div class="table-td">
+                <div class="sub-table">
+                    <div class="sub-table-tr">
+                        <div class="sub-table-td" style="width: 70%;">行合并</div>
+                        <div class="sub-table-td" style="width: 30%;">8.26%</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div>实用技巧</div>
+    <div>1.父元素宽度固定，想让若干个子元素平分宽度</div>
+    <div> 父元素 display: table;  width: 1000px</div>
+    <div  style="display: table;  width: 1000px;height: 50px;">
+        <div style="display:table-cell;background-color:green;border: 3px solid gray;">子元素 display: table-cell</div>
+        <div style="display:table-cell;background-color:green;border: 3px solid gray;">子元素 display: table-cell</div>
+        <div style="display:table-cell;background-color:green;border: 3px solid gray;">子元素 display: table-cell</div>
+        <div style="display:table-cell;background-color:green;border: 3px solid gray;">子元素 display: table-cell</div>
+        <div style="display:table-cell;background-color:green;border: 3px solid gray;">子元素 display: table-cell</div>
+    </div>
+    <div style="margin-top:20px">
+        <div>2.块级子元素垂直居中</div>
+        <div class="size1" style="display:table">父元素display: table
+            <div class="size2" style="display:table-cell;vertical-align:middle">子元素display: table-cell; vertical-align: middle</div>
+        </div>
+        <div>什么都不做</div>
+        <div class="size1">父元素display: table
+            <div class="size2">子元素display: table-cell; vertical-align: middle</div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
